# gcp-brownbag-agents

./: .dockerignore  .gitignore  Dockerfile  cloudbuild-deploy.yaml  main.py  pyproject.toml  requirements.txt  test_locally.sh
src/gcp_brownbag_agents/: agents.py  prompts.py  tools.py  types.py
