[project]
name = "gcp-brownbag-agents"
version = "0.1.0"
description = "Agent logic for Grimaud, the Dataworkz Brownbag Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.9.0",
    "duckduckgo-search>=8.0.1",
    "httpx>=0.28.1",
    "logfire[httpx]>=3.14.1",
    "markdownify>=1.1.0",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.4",
    "tenacity>=9.1.2",
]
